--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".main.activities.VisualizationActivity" />
         <activity android:name=".main.activities.DetailActivity" />
         <activity android:name=".main.activities.PostBodyActivity"></activity>
+        <service android:name=".main.utilities.PushNotification"></service>
     </application>
 
 </manifest>
